@@ -83,6 +83,7 @@
             Remove BluetoothRemoteGATTCharacteristic.writeValue on NRF51 (accidental inclusion - it's not required)
             Double IO buffer size to 256 (1k bytes) on boards with 96k of RAM or more (or NRF52)
             nRF5x: allow arbirtary baud rates to be specified for UART
+            On devices with low flash, ensure atan2 uses the slower/smaller atan implementation
 
      1v99 : Increase jslMatch error buffer size to handle "UNFINISHED TEMPLATE LITERAL" string (#1426)
             nRF5x: Make FlashWrite cope with flash writes > 4k
